// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanCard /> Snapshots should match snapshot with default PlanCard 1`] = `
.c16 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c16:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c16:active svg {
  fill: #FFFFFF;
}

.c16:disabled {
  background-color: #F5F5FA;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c16:disabled svg {
  fill: #D7D7E0;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 48px;
  line-height: 56px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c15 {
  margin-top: 24px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #6B6B78;
  font-weight: 500;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  color: #231B22;
  margin-bottom: 4px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  height: 40px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  color: #6B6B78;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 32px;
  margin-bottom: 40px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  display: inline-block;
  position: relative;
  max-width: 288px;
  overflow: hidden;
  padding: 64px 20px 32px 20px;
  border-radius: 16px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  display: inline-block;
  width: 100%;
  height: 8px;
  background-color: #710252;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  top: 28px;
  left: 20px;
  padding-left: 8px;
  padding-right: 8px;
  border: 1px solid #D7D7E0;
  border-radius: 4px;
  font-size: 12px;
  line-height: px;
  font-weight: 500;
}

.c10 {
  margin: 16px 0 0;
  padding: 0;
  list-style: none;
}

.c11 {
  margin-bottom: 16px;
}

.c11 svg {
  vertical-align: middle;
  margin-right: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.c12 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #231B22;
}

.c14 {
  display: block;
  padding: 0;
  width: 100%;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  outline: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 12px;
  font-family: Rubik;
  font-size: 12px;
  font-weight: 500;
  color: #D8385E;
}

<div>
  <article
    class="c0"
  >
    <span
      class="c1"
    />
    <span
      class="c2"
    >
      Recommended Plan
    </span>
    <div
      class=""
    >
      <p
        class="c3"
      >
        plan
      </p>
      <h5
        class="c4"
      >
        Basic
      </h5>
      <p
        class="c5"
      />
      <div
        class="c6"
      >
        <sup
          class="c7"
        >
          $
        </sup>
        <strong
          class="c8"
        >
          99.90
        </strong>
        <sub
          class="c9"
        >
          /month
        </sub>
      </div>
      <p
        class="c3"
      >
        Get access to
      </p>
      <ul
        class="c10"
      >
        <li
          class="c11"
        >
          <div
            class="c12"
          >
            <svg
              fill="#9898A6"
              height="16"
              width="16"
            />
            <span
              class="c13"
            >
              list item
            </span>
          </div>
          <a
            class="c14"
          >
            button
          </a>
        </li>
      </ul>
    </div>
    <footer
      class="c15"
    >
      <button
        class="c16"
      >
        Select this plan
      </button>
    </footer>
  </article>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with variant 1`] = `
.c7 {
  margin: 0;
  padding: 0;
  font-size: 48px;
  line-height: 56px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #6B6B78;
  font-weight: 500;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  color: #231B22;
  margin-bottom: 4px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  height: 40px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  color: #6B6B78;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 32px;
  margin-bottom: 40px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  display: inline-block;
  position: relative;
  max-width: 288px;
  overflow: hidden;
  padding: 64px 20px 32px 20px;
  border-radius: 16px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  display: inline-block;
  width: 100%;
  height: 8px;
  background-color: #1D856C;
}

<div>
  <article
    class="c0"
  >
    <span
      class="c1"
    />
    <div
      class=""
    >
      <p
        class="c2"
      >
        plan
      </p>
      <h5
        class="c3"
      >
        Basic
      </h5>
      <p
        class="c4"
      />
      <div
        class="c5"
      >
        <sup
          class="c6"
        >
          $
        </sup>
        <strong
          class="c7"
        >
          99.90
        </strong>
        <sub
          class="c8"
        >
          /month
        </sub>
      </div>
    </div>
  </article>
</div>
`;
